# cubewm

./: .clang-format  .clang-tidy  .cproject  .gitignore  .project  CMakeLists.txt  README.md  compile_commands.json  config.yaml  wm_diagram.drawio
docs/: main.md
src/: .main.cpp.swp  .server.h.swp  atoms.cpp  atoms.h  binding.cpp  binding.h  command.h  config.cpp  config.h  connection.cpp  connection.h  container.cpp  container.h  dockarea.cpp  dockarea.h  error.cpp  error.h  event.cpp  event.h  ewmh.cpp  ewmh.h  frame.h  geometry.h  helper.h  keybind.cpp  keybind.h  keyboard.cpp  keyboard.h  layout.cpp  layout.h  logger.cpp  logger.h  main.cpp  managed.h  manager.h  monitor.cpp  monitor.h  monitormanager.cpp  monitormanager.h  node.h  (+25 more)
src/helper/: memory.h  mixins.h  pointer_wrapper.h  std_extension.h  type_name.h
src/x11/: .window.h.swp  atom.cpp  atom.h  connection.cpp  connection.h  constant.h  event.cpp  event.h  event_handler.cpp  event_handler.h  ewmh.cpp  ewmh.h  extension.cpp  extension.h  frame.cpp  frame.h  keybind.cpp  keybind.h  keyboard.cpp  keyboard.h  monitor.cpp  monitor.h  server.cpp  server.h  window.cpp  window.h  x11.cpp  x11.h  xkb.cpp  xkb.h
test/: init.py  start_cubewm.sh
